--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -23,8 +23,41 @@
   </head>
   <body>
 
+    <div class="container"  id="main">
+      <div class="navbar navbar-fixed-top">
+
+      </div> <!-- end of navbar -->
+
+      <div class="carousel slide" id="myCarousel">
+
+      </div> <!-- end of carousel -->
+
+      <div class="row" id="bigCallout">
+
+      </div> <!-- end  of bigCallout row -->
+
+      <div class="row" id="featuresHeading">
+
+      </div> <!-- end of featuresHeading -->
+
+      <div class="row"  id="features">
+
+      </div> <!-- end of features -->
+
+      <div class="row" id="moreInfo">
+
+      </div> <!-- end of moreInfo -->
+
+      <div class="row" id="moreCourses">
+
+      </div> <!-- end of moreCourses -->
+
+    </div> <!-- end of container -->
     <!-- All Javascript at the bottom of the page for faster page loading -->
 
+    <footer>
+
+    </footer>
   	<!-- First try for the online version of jQuery-->
   	<script src="http://code.jquery.com/jquery.js"></script>
 
