--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -26,6 +26,32 @@
     <div class="container"  id="main">
       <div class="navbar navbar-fixed-top">
 
+        <div class="container">
+          <a href="/" class="navbar-brand">
+            <img src="images/logo.png" alt="our company logo">
+          </a>
+          <div class="nav-collapse collapse nav-collapse-responsive">
+             <ul class="nav navbar-nav">
+               <li class="active">
+                 <a href="#">Home</a>
+               </li>
+               <li>
+                 <a href="#">Services</a>
+               </li>
+             </ul> <!-- end of menu list -->
+            <form class="navbar-form pull-left">
+              <input type="text" placeholder="search this site.." class="form-control" id="searchInput">
+              <button type="submit" class="btn btn-default">
+                <span class="glyphicon glyphicon-search"></span>
+              </button>
+            </form> <!-- end of search form -->
+            <ul class="nav navbar-nav pull-right">
+              <li>
+                <a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a>
+              </li>
+            </ul>
+          </div> <!-- end of menu items div -->
+        </div> <!-- end of navbar container -->
       </div> <!-- end of navbar -->
 
       <div class="carousel slide" id="myCarousel">
