--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -27,6 +27,12 @@
       <div class="navbar navbar-fixed-top">
 
         <div class="container">
+          <button type="button" class="navbar-toggle" data-target=".nav-collapse-responsive"
+          data-toggle="collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
           <a href="/" class="navbar-brand">
             <img src="images/logo.png" alt="our company logo">
           </a>
@@ -35,8 +41,28 @@
                <li class="active">
                  <a href="#">Home</a>
                </li>
-               <li>
-                 <a href="#">Services</a>
+               <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                   Services <strong class="caret"></strong></a>
+                 <ul class="dropdown-menu">
+                   <li>
+                     <a href="#">Web Design</a>
+                   </li>
+                   <li>
+                     <a href="#">Web Developement</a>
+                   </li>
+                   <li>
+                     <a href="#">SEO</a>
+                   </li>
+                   <li class="divider"></li>
+                   <li class="dropdown-header">More Services</li>
+                   <li>
+                     <a href="#">Content Creation</a>
+                   </li>
+                   <li>
+                     <a href="#">Social Media Marketing</a>
+                   </li>
+                 </ul> <!-- end of drop down menu of services -->
                </li>
              </ul> <!-- end of menu list -->
             <form class="navbar-form pull-left">
@@ -46,8 +72,25 @@
               </button>
             </form> <!-- end of search form -->
             <ul class="nav navbar-nav pull-right">
-              <li>
-                <a href="#"><span class="glyphicon glyphicon-user"></span> My Account</a>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <span class="glyphicon glyphicon-user"></span> My Account
+                <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="#"><span class="glyphicon glyphicon-wrench"></span> Settings</a>
+                  </li>
+                  <li>
+                    <a href="#"><span class="glyphicon glyphicon-refresh"></span> Update Profile</a>
+                  </li>
+                  <li>
+                    <a href="#"><span class="glyphicon glyphicon-briefcase"></span> Billing</a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                    <a href="#"><span class="glyphicon glyphicon-off"></span> Logout</a>
+                  </li>
+                </ul>
               </li>
             </ul>
           </div> <!-- end of menu items div -->
