--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -99,7 +99,52 @@
 
       <div class="carousel slide" id="myCarousel">
 
-      </div> <!-- end of carousel -->
+        <!-- indicators at bottom -->
+        <ol class="carousel-indicators">
+      		<li class="active" data-slide-to="0" data-target="#myCarousel"></li>
+      		<li data-slide-to="1" data-target="#myCarousel"></li>
+      		<li data-slide-to="2" data-target="#myCarousel"></li>
+      	</ol>
+        <!-- wrapper class for slides -->
+        <div class="carousel-inner">
+          <div class="item active" id="slide1">
+            <div class="carousel-caption">
+              <h4>Bootstrap 3</h4>
+              <p>
+                Build brand new website with twitter Bootstrap 3.
+              </p>
+            </div> <!-- end of carousel one caption -->
+          </div> <!-- end of carousel item one -->
+          <div class="item" id="slide2">
+            <div class="carousel-caption">
+              <h4>Learn to code a web site in 4hours</h4>
+              <p>
+                PSD to HTML5 &amp; CSS3 is a popular Udemy course that has helped thousands aspiring web designers
+                launch their web design carrer
+              </p>
+            </div> <!-- end of carousel second caption -->
+          </div> <!-- end of carousel item two -->
+          <div class="item"  id="slide3">
+            <div class="carousel-caption">
+              <h4>Web hosting 101</h4>
+              <p>
+                Learn how to buy a perfect domain name and hosting package and get your website live on the web
+                with ease
+              </p>
+            </div> <!-- end of carousel third caption -->
+          </div> <!-- end of carousel item three -->
+
+        </div> <!-- end of carousel wrapper div -->
+
+        <!-- control to change Carousel -->
+        <a class="left carousel-control" data-slide="prev" href="#myCarousel">
+          <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" data-slide="next" href="#myCarousel">
+          <span class="icon-next"></span>
+        </a>
+
+      </div><!-- end myCarousel -->
 
       <div class="row" id="bigCallout">
 
