Create big callout

--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -147,7 +147,23 @@
       </div><!-- end myCarousel -->
 
       <div class="row" id="bigCallout">
-
+        <div class="col-12">
+          <!-- visisble only on small devices -->
+          <div class="well well-small visible-sm">
+            <a href="#" class="btn btn-large btn-block btn-default">Give us a call</a>
+          </div> <!-- end of small well -->
+          <div class="well">
+            <div class="page-header">
+              <h1>A Fancy Header <small>A subheader for extra awesome</small></h1>
+            </div> <!-- end of page header-->
+            <p class="lead">
+              some solid leading copy will help get your user enagaged. Use this area
+              to come up with something real nice. You know what I'm saying?
+            </p>
+            <a href="#" class="btn btn-large btn-primary">Click a nice big button</a>
+            <a href="#" class="btn btn-large btn-link">or a secondary link</a>
+          </div> <!-- end of well -->
+        </div> <!-- end of col-12 -->
       </div> <!-- end  of bigCallout row -->
 
       <div class="row" id="featuresHeading">
