--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -148,6 +148,11 @@
 
       <div class="row" id="bigCallout">
         <div class="col-12">
+          <div class="alert alert-success alert-block fade in" id="successAlert">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <h4>Success</h4>
+            <p> Use just made this element display using jquery</p>
+          </div>
           <!-- visisble only on small devices -->
           <div class="well well-small visible-sm">
             <a href="#" class="btn btn-large btn-block btn-default">Give us a call</a>
@@ -160,7 +165,7 @@
               some solid leading copy will help get your user enagaged. Use this area
               to come up with something real nice. You know what I'm saying?
             </p>
-            <a href="#" class="btn btn-large btn-primary">Click a nice big button</a>
+            <a href="#" class="btn btn-large btn-primary" id="alertMe">Click a nice big button</a>
             <a href="#" class="btn btn-large btn-link">or a secondary link</a>
           </div> <!-- end of well -->
         </div> <!-- end of col-12 -->
