--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -172,10 +172,57 @@
       </div> <!-- end  of bigCallout row -->
 
       <div class="row" id="featuresHeading">
-
+        <div class="col-12">
+          <h1>More Features</h1>
+          <p class="lead">
+            Organic distillery gastropub, marfa pickled irony banjo shoreditch fanny pack hot chicken squid selvage farm-to-table. Post-ironic bushwick kombucha taxidermy sustainable quinoa VHS distillery waistcoat franzen vice.
+            Microdosing single-origin coffee tattooed glossier cliche paleo +1 prism pug tumblr shaman echo park flannel
+          </p>
+        </div> <!-- end of col-12 -->
       </div> <!-- end of featuresHeading -->
 
       <div class="row"  id="features">
+        <div class="col-sm-4 feature">
+          <div class="panel">
+            <div class="panel-heading">
+              <h3 class="panel-title">Markup with HTML</h3>
+            </div> <!-- end of panel heading -->
+            <img src="images/badge_html5.jpg" alt="HTML5" class="img-circle"/>
+            <p>
+              Keffiyeh af gluten-free typewriter blue bottle lumbersexual church-key 90's cred cronut godard chartreuse cornhole skateboard gochujang.
+              Gentrify viral hexagon yr cornhole austin celiac keytar vinyl raclette
+            </p>
+            <a href="#" class="btn btn-warning btn-block">Learn to code HTML5</a>
+          </div> <!-- end panel -->
+        </div>
+
+        <div class="col-sm-4 feature">
+          <div class="panel">
+            <div class="panel-heading">
+              <h3 class="panel-title">Style with css3</h3>
+            </div> <!-- end of panel heading -->
+            <img src="images/badge_css3.jpg" alt="HTML5" class="img-circle"/>
+            <p>
+              Keffiyeh af gluten-free typewriter blue bottle lumbersexual church-key 90's cred cronut godard chartreuse cornhole skateboard gochujang.
+              Gentrify viral hexagon yr cornhole austin celiac keytar vinyl raclette
+            </p>
+            <a href="#" class="btn btn-danger btn-block">Style up with css3</a>
+          </div> <!-- end panel -->
+        </div>
+
+        <div class="col-sm-4 feature">
+          <div class="panel">
+            <div class="panel-heading">
+              <h3 class="panel-title">Framework by Bootstrap3</h3>
+            </div> <!-- end of panel heading -->
+            <img src="images/badge_bootstrap.jpg" alt="HTML5" class="img-circle"/>
+            <p>
+              Keffiyeh af gluten-free typewriter blue bottle lumbersexual church-key 90's cred cronut godard chartreuse cornhole skateboard gochujang.
+              Gentrify viral hexagon yr cornhole austin celiac keytar vinyl raclette
+            </p>
+            <a href="#" class="btn btn-info btn-block">More info</a>
+          </div> <!-- end panel -->
+        </div>
 
       </div> <!-- end of features -->
 
