--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -227,7 +227,56 @@
       </div> <!-- end of features -->
 
       <div class="row" id="moreInfo">
+        <div class="col-sm-6">
+          <h3>Neat Tabbable content</h3>
+          <div class="tabbable">
+            <ul class="nav nav-tabs">
+              <li class="active"><a href="#tab1" data-toggle="tab">Section 1</a></li>
+              <li><a href="#tab2" data-toggle="tab">Section 2</a></li>
+            </ul> <!-- end of tab heading -->
+            <div class="tab-content">
+              <div class="tab-pane active" id="tab1">
+                <h4><span class="glyphicon glyphicon-map-marker"></span>
+                  Our Location <small>More like our favourite surf spot</small></h4>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52864.87101915078!2d-118.36149762624507!3d34.09374583207197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf07045279bf%3A0xf67a9a6797bdfae4!2sHollywood%2C+Los+Angeles%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1498361186027"
+                    width="100%" height="200" frameborder="0" style="border:0" allowfullscreen>
+                  </iframe>
+                  <p>
+                    Ethical whatever literally pinterest, wayfarers listicle gluten-free iPhone.
+                    Echo park gluten-free disrupt, keffiyeh irony bushwick pickled mustache pabst typewriter roof party neutra kitsch williamsburg health goth.
+                    Wolf umami neutra tofu freegan fashion axe try-hard pabst kogi live-edge pug literally green juice.
+                    Slow-carb franzen health goth chicharrones venmo. 3 wolf moon cred marfa kickstarter air plant pour-over.
+                  </p>
+                  <p>
+                    Ethical whatever literally pinterest, wayfarers listicle gluten-free iPhone.
+                    Echo park gluten-free disrupt, keffiyeh irony bushwick pickled mustache pabst typewriter roof party neutra kitsch williamsburg health goth.
+                    Wolf umami neutra tofu freegan fashion axe try-hard pabst kogi live-edge pug literally green juice.
+                    Slow-carb franzen health goth chicharrones venmo. 3 wolf moon cred marfa kickstarter air plant pour-over.
+                  </p>
+              </div> <!-- end of tab1 -->
 
+              <div class="tab-pane" id="tab2">
+                <h4>A left floated picture <small>Use PlaceHold.in</small></h4>
+                <img src="https://via.placeholder.com/140x140" alt="" class="thumbnail pull-left"/>
+                <p>
+                  Ethical whatever literally pinterest, wayfarers listicle gluten-free iPhone.
+                  Echo park gluten-free disrupt, keffiyeh irony bushwick pickled mustache pabst typewriter roof party neutra kitsch williamsburg health goth.
+                  Wolf umami neutra tofu freegan fashion axe try-hard pabst kogi live-edge pug literally green juice.
+                  Slow-carb franzen health goth chicharrones venmo. 3 wolf moon cred marfa kickstarter air plant pour-over.
+                </p>
+                <p>
+                  Ethical whatever literally pinterest, wayfarers listicle gluten-free iPhone.
+                  Echo park gluten-free disrupt, keffiyeh irony bushwick pickled mustache pabst typewriter roof party neutra kitsch williamsburg health goth.
+                  Wolf umami neutra tofu freegan fashion axe try-hard pabst kogi live-edge pug literally green juice.
+                  Slow-carb franzen health goth chicharrones venmo. 3 wolf moon cred marfa kickstarter air plant pour-over.
+                </p>
+                <hr>
+
+              </div> <!-- end of tab2 -->
+            </div> <!-- end of tab content -->
+          </div>
+        </div> <!-- end of first column -->
       </div> <!-- end of moreInfo -->
 
       <div class="row" id="moreCourses">
