--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -272,7 +272,43 @@
                   Slow-carb franzen health goth chicharrones venmo. 3 wolf moon cred marfa kickstarter air plant pour-over.
                 </p>
                 <hr>
+                <a href="#myModal" class="btn btn-warning" data-toggle="modal">
+                  <span class="glyphicon glyphicon-hand-up"></span> Click for a modal window
+                </a>
+                <div class="modal fade" id="myModal">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">A Modal window</h4>
+                      </div> <!-- end of modal header -->
+                      <div class="modal-body">
+                        <h4>Text in modal</h4>
+                        <p>
+                          Ethical whatever literally pinterest, wayfarers listicle gluten-free iPhone.
+                          Echo park gluten-free disrupt, keffiyeh irony bushwick pickled mustache pabst typewriter roof party neutra kitsch williamsburg health goth.
+                          Wolf umami neutra tofu freegan fashion axe try-hard pabst kogi live-edge pug literally green juice.
+                          Slow-carb franzen health goth chicharrones venmo
+                        </p>
+                        <h4>popover in a modal</h4>
+                        <a href="#" class="btn btn-danger pop">Don't click this button</a>
+                        <h4>Tooltips in modal</h4>
+                        <a href="#">This link</a>should be a tooltop so as <a href="#">this one</a>
+                        <hr>
+                        <p>
+                          <small class="text-muted">This form doesn't do anything</small>
+                        </p>
+                        <form class="" action="index.html" method="post">
 
+                        </form> <!-- end of modal form -->
+                      </div> <!-- end of modal body -->
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"> Close button</button>
+                        <button type="button" class="btn btn-primary"> Save Changes</button>
+                      </div> <!-- end of modal footer -->
+                    </div> <!-- end of modal content -->
+                  </div> <!-- end of modal dialog -->
+                </div> <!-- end of myModal -->
               </div> <!-- end of tab2 -->
             </div> <!-- end of tab content -->
           </div>
