--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -298,8 +298,28 @@
                         <p>
                           <small class="text-muted">This form doesn't do anything</small>
                         </p>
-                        <form class="" action="index.html" method="post">
+                        <form class="form-horizontal">
+                          <div class="form-group">
+                            <label class="col-lg-2 control-label" for="inputName">Name</label>
+                            <div class="col-lg-10">
+                              <input type="text" placeholder="Name" class="form-control" id="inputName">
+                            </div>
+                          </div> <!-- end of name form -->
+                          <div class="form-group">
+                            <label class="col-lg-2 control-label" for="inputEmail">Email</label>
+                            <div class="col-lg-10">
+                              <input type="email" placeholder="Email" class="form-control" id="inputEmail">
+                            </div>
+                          </div> <!-- end of email input -->
 
+                          <div class="form-group">
+                            <label class="col-lg-2 control-label" for="inputMessage">Message</label>
+                            <div class="col-lg-10">
+                              <textarea class="form-control" id="inputMessage" placeholder="Message"
+                              rows="3"></textarea>
+                              <button type="button" class="btn btn-success pull-right">Send</button>
+                            </div>
+                          </div> <!-- end of message input -->
                         </form> <!-- end of modal form -->
                       </div> <!-- end of modal body -->
                       <div class="modal-footer">
