--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -291,9 +291,11 @@
                           Slow-carb franzen health goth chicharrones venmo
                         </p>
                         <h4>popover in a modal</h4>
-                        <a href="#" class="btn btn-danger pop">Don't click this button</a>
+                        <a href="#" class="btn btn-danger pop" data-toggle="popover" data-placement="top"
+                        data-original-title="You clicked it" data-content="I knew you would">
+                          Don't click this button</a>
                         <h4>Tooltips in modal</h4>
-                        <a href="#">This link</a>should be a tooltop so as <a href="#">this one</a>
+                        <a href="" data-original-title="tooltip" rel="tooltip">This link</a>should be a tooltop so as <a href="#" data-original-title="tooltip there you" rel="tooltip">this one</a>
                         <hr>
                         <p>
                           <small class="text-muted">This form doesn't do anything</small>
