Code typography text section

--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -335,6 +335,42 @@
             </div> <!-- end of tab content -->
           </div>
         </div> <!-- end of first column -->
+        <div class="col-sm-6">
+          <h3>Some Text Info</h3>
+          <p>
+            Cray hammock kombucha, live-edge leggings mustache four loko swag small batch snackwave edison bulb.
+            Kombucha portland blog, deep v VHS poutine lyft brunch subway tile iPhone edison bulb cardigan art party XOXO gochujang.
+          </p>
+          <h4>List Group</h4>
+          <div class="list-group">
+            <a href="#" class="list-group-item">
+              <h4 class="list-group-item-heading">Kale</h4>
+              <p class="list-group-item-text">
+                Cray hammock kombucha, live-edge leggings mustache four loko swag small batch snackwave edison bulb.
+                Kombucha portland blog, deep v VHS poutine lyft brunch subway tile iPhone edison bulb cardigan art party XOXO gochujang.
+              </p>
+            </a>
+            <a href="#" class="list-group-item">
+              <h4 class="list-group-item-heading">Carrots</h4>
+              <p class="list-group-item-text">
+                Cray hammock kombucha, live-edge leggings mustache four loko swag small batch snackwave edison bulb.
+                Kombucha portland blog, deep v VHS poutine lyft brunch subway tile iPhone edison bulb cardigan art party XOXO gochujang.
+              </p>
+            </a>
+            <a href="#" class="list-group-item">
+              <h4 class="list-group-item-heading">Beetroot</h4>
+              <p class="list-group-item-text">
+                Cray hammock kombucha, live-edge leggings mustache four loko swag small batch snackwave edison bulb.
+                Kombucha portland blog, deep v VHS poutine lyft brunch subway tile iPhone edison bulb cardigan art party XOXO gochujang.
+              </p>
+            </a>
+          </div> <!-- end of list group -->
+          <h6>A small heading</h6>
+          <p>
+            Kombucha deep v try-hard direct trade shaman raclette,
+            vape etsy hashtag gochujang fashion axe post-ironic four dollar toast portland. 
+          </p>
+        </div> <!-- end of second column -->
       </div> <!-- end of moreInfo -->
 
       <div class="row" id="moreCourses">
