Code thumbnails for courses

--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -368,13 +368,56 @@
           <h6>A small heading</h6>
           <p>
             Kombucha deep v try-hard direct trade shaman raclette,
-            vape etsy hashtag gochujang fashion axe post-ironic four dollar toast portland. 
+            vape etsy hashtag gochujang fashion axe post-ironic four dollar toast portland.
           </p>
         </div> <!-- end of second column -->
       </div> <!-- end of moreInfo -->
 
       <div class="row" id="moreCourses">
+        <div class="col-12">
+          <h3>Learn more about web</h3>
+          <div class="thumbnails row">
+            <div class="col-6">
+              <div class="thumbnail">
+                <img src="images/item_webhosting101.jpg" alt="" />
+                <div class="label label-info price">
+                  <span class="glyphicon glyphicon-tag"> Free</span>
+                </div>
+                <div class="caption">
+                  <h3>Web hosting 1001</h3>
+                  <p>
+                    Learn how to publish a website live in no time with this web hosting crash course
+                    and also setup your first wordpress site in 5 minutes
+                  </p>
 
+                  <p>
+                    <a href="#" class="btn btn-primary btn-small">Take to course</a>
+                    <a href="#" class="btn btn-small btn-link">Learn more</a>
+                  </p>
+                </div>
+              </div> <!-- end of first course -->
+            </div> <!-- end of first column -->
+            <div class="col-6">
+              <div class="thumbnail">
+                <img src="images/item_psd2html5.jpg" alt="" />
+                <div class="label label-success price">
+                  <span class="glyphicon glyphicon-tag"> <sup>$</sup>39</span>
+                </div>
+                <div class="caption">
+                  <h3>PSD to html5 &amp; css3</h3>
+                  <p>
+                    Learn how to take a PSD and turn it into a beautiful, hand-coded HTML5 &amp;
+                    css3 website with this web design crash course
+                  </p>
+                  <p>
+                    <a href="#" class="btn btn-primary btn-small">Take to course</a>
+                    <a href="#" class="btn btn-small btn-link">Learn more</a>
+                  </p>
+                </div>
+              </div> <!-- end of first course -->
+            </div> <!-- end of second column -->
+          </div> <!-- end of thumbnail row -->
+        </div> <!-- end of morecourses full width container -->
       </div> <!-- end of moreCourses -->
 
     </div> <!-- end of container -->
