Code the Footer

--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -424,7 +424,40 @@
     <!-- All Javascript at the bottom of the page for faster page loading -->
 
     <footer>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <h6>Copyright &copy;2017 Akshay</h4>
+          </div>
+          <div class="col-sm-4">
+            <h6>About US</h6>
+            <p>
+              Pabst photo booth disrupt health goth forage tattooed prism vape put a bird on it fashion axe taiyaki four loko tacos.
+              Food truck pinterest brunch helvetica beard franzen cray marfa salvia cardigan roof party la croix small batch street art.
+            </p>
+          </div>
+          <div class="col-sm-2">
+            <h6>Navigation</h6>
+            <ul class="unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Links</a></li>
+              <li><a href="#">Contacts</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <h6>Follow Us</h6>
+            <ul class="unstyled">
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">FaceBook</a></li>
+              <li><a href="#">Google Plus</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <h6>Coded with <span class="glyphicon glyphicon-heart"></span> by Akshay</h6>
+          </div>
+        </div> <!-- end of footer row -->
+      </div> <!-- end of footer contaier -->
     </footer>
   	<!-- First try for the online version of jQuery-->
   	<script src="http://code.jquery.com/jquery.js"></script>
